<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    // Main
    <item
        android:id="@+id/action_main"
        android:orderInCategory="1"
        android:title="@string/action_main"
        android:showAsAction="never"/>

    // Temperature Graph
    <item
        android:id="@+id/action_temp"
        android:orderInCategory="2"
        android:title="@string/action_temp"
        android:showAsAction="never"/>

    // Camera
    <item
        android:id="@+id/action_cam"
        android:title="@string/action_cam"
        android:orderInCategory="3"
        android:showAsAction="never" />

    // Info
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        android:showAsAction="never"/>

</menu>