<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="net.darkpack.crimsonctrl.TempActivity"
android:showAsAction="always">


// Main
<item
    android:id="@+id/action_main"
    android:orderInCategory="2"
    android:title="@string/action_main"
    android:showAsAction="never"/>

// Camera
<item
    android:id="@+id/action_cam"
    android:orderInCategory="3"
    android:title="@string/action_cam"
    android:showAsAction="never"/>

// Settings
<item
    android:id="@+id/action_settings"
    android:title="@string/action_settings"
    android:orderInCategory="4"
    app:showAsAction="never" />

// Info
<item
    android:id="@+id/action_info"
    android:orderInCategory="5"
    android:title="@string/action_info"
    android:showAsAction="never"/>


</menu>